--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@ body {
 }
 
 #logo {
-    margin-left: 520px;
+    margin-left: 92px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: auto;
     color: rgb(0, 0, 0);
     display: flex;
     font-size: 50px;
@@ -18,7 +21,7 @@ body {
     margin: auto;
     font-size: 32px;
     font-weight: bold;
-    margin-left: 16px;
+    margin-left:16px;
 }
 nav{
     height:200px;
@@ -38,10 +41,11 @@ nav{
 #image img {
     width: 100%;
     margin-top: 0px;
-    margin-bottom: 16px;
+    margin-bottom: 0px;
 }
 
 #main {
+    width: 100%;
     margin: auto;
 }
 
@@ -50,93 +54,13 @@ nav{
     color: gray;
     padding: 16px;
 }
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    font-family: poppins;
-}
-nav{
-    height: 50px;
-    background: #000000;
-}
-nav h1{
-    position: absolute;
-    width:200px;
-    top: 8px;
-    left: 5%;
-    color: white;
-    text-transform: uppercase;
-}
-nav ul{
-    float: right;
-    margin-right: 25px;
-    list-style: none;
-}
-nav ul li {
-    display: inline-block;
-    line-height: 50px;
-    margin: 0 15px;
-}
-nav ul li a{
-    max-width: 800px;
-    position: relative;
-    padding: 5px 0;
-    color: white;
-    font-size: 18px;
-    text-decoration: none;
-}
-label #sign-one,
-label #sign-two{
-    font-size: 20px;
-    color: white;
-    float: right;
-    line-height: 50px;
-    margin-right: 30px;
-    cursor: pointer;
-    display: none;
-}
-#res-menu{
-    display: none;
-}
-.banner-area{
-    background: linear-gradient(to right,rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(2.jpg);
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-}
-@media (max-width: 870px) {
-    Label #sign-one{
-        display: block;
+    main {
+        max-width: 800px;
     }
-    nav ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: crimson;
-        top: 50px;
-        left: -100%;
-        text-align: center;
-        transition: .5s;
-        z-index: 10;
+    #text {
+        margin-left: 65px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: auto;
     }
-    nav ul li{
-        display: block;
-        margin: 40px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    #res-menu:checked ~ ul{
-        left: 0;
-    }
-    #res-menu:check ~ label #sign-one{
-        display: none;
-    }
-    #res-menu:check ~ label #sign-two{
-        display: block;
-    }
-}
+
